fix(scrollbar):remove scrollbar and html modify

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1956,7 +1956,7 @@ table th[class*="col-"] {
     width: 100%;
     margin-bottom: 15px;
     overflow-y: hidden;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
+    /*-ms-overflow-style: -ms-autohiding-scrollbar;*/
     border: 1px solid #ddd;
   }
   .table-responsive > .table {
@@ -5440,13 +5440,13 @@ button.close {
   margin-left: 0;
 }
 
-.modal-scrollbar-measure {
+/*.modal-scrollbar-measure {
   position: absolute;
   top: -9999px;
   width: 50px;
   height: 50px;
   overflow: scroll;
-}
+}*/
 
 @media (min-width: 768px) {
   .modal-dialog {
